@@ -7,8 +7,14 @@ import static com.sap.ai.sdk.orchestration.client.model.MaskingProviderConfig.Ty
 import com.sap.ai.sdk.orchestration.client.model.DPIEntities;
 import com.sap.ai.sdk.orchestration.client.model.DPIEntityConfig;
 import com.sap.ai.sdk.orchestration.client.model.MaskingProviderConfig;
+
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+
+import io.vavr.control.Option;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.Value;
@@ -20,12 +26,12 @@ public class DpiMaskingConfig implements MaskingConfig {
   @Nonnull List<DPIEntities> entities;
 
   @Nonnull
-  public static Builder forAnonymization() {
+  public static Builder anonymization() {
     return new DpiMaskingConfig.Builder(ANONYMIZATION);
   }
 
   @Nonnull
-  public static Builder forPseudonymization() {
+  public static Builder pseudonymization() {
     return new DpiMaskingConfig.Builder(PSEUDONYMIZATION);
   }
 
@@ -43,8 +49,13 @@ public class DpiMaskingConfig implements MaskingConfig {
     private final MaskingProviderConfig.MethodEnum maskingMethod;
 
     @Nonnull
-    public DpiMaskingConfig withEntities(@Nonnull final DPIEntities... entities) {
-      return new DpiMaskingConfig(maskingMethod, List.of(entities));
+    public DpiMaskingConfig withEntities(@Nonnull final DPIEntities entity, @Nullable final DPIEntities... entities) {
+      var entitiesList = new ArrayList<DPIEntities>();
+      entitiesList.add(entity);
+      if ( entities != null) {
+        entitiesList.addAll(Arrays.asList(entities));
+      }
+      return new DpiMaskingConfig(maskingMethod,  entitiesList);
     }
   }
 }
